# AI_NovelGenerator

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AI_NOVEL_GENERATOR_深度测试综合报告.md  CLAUDE.md  FINAL_OPTIMIZATION_SUMMARY.md  GEMINI3_CONFIG_GUIDE.md  INSTALLATION_GUIDE.md  LICENSE  NEXT_STEPS.md  PERFORMANCE_ANALYSIS_SUMMARY.md  README.md  README.zh-CN.md  README_DEV.md  README_fr-FR.md  README_ja.md  README_sawcuengh.md  README_zh-CN.md  SECURITY_AUDIT_REPORT.md  architecture_consistency_checker.py  architecture_consistency_validator.py  build.py  chapter_directory_parser.py  chapter_quality_analyzer.py  chapter_title_utils.py  config.example.json  config_manager.py  consistency_checker.py  dependency_management.py  dev-requirements.txt  embedding_adapters.py  fix_chapter_title_duplication.py  launcher.py  llm_adapters.py  llm_output_cleaning.py  main.py  main.spec  optimized_rate_limiter.py  performance_monitor.py  prompt_definitions.py  (+19 more)
.claude/: index.json
.claude-plugin/: marketplace.json
backend/: runtime.py
config/: genre_dimensions.json  quality_loop_policy.example.json  story_rules.json
docs/: AGENTS.md  API_REFERENCE.md  CLAUDE.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCUMENTATION_INDEX.md  MIGRATION_GUIDE.md  PROGRESSIVE_GENERATOR_IMPLEMENTATION.md  PROJECT_SUMMARY.md  README_NEW.md  REFACTORING_PLAN.md  REFACTORING_REPORT.md  ROOT_CAUSE_ANALYSIS_AND_FIX.md  USER_MANUAL.md  complete_workflow_v3.md
frontend/: package-lock.json
knowledge/: __init__.py  base.py  models.py
novel_generator/: AGENTS.md  CLAUDE.md  __init__.py  architecture_compliance.py  (+55 more)
(+402 files in other folders)
