[metadata]
name = ai-novel-generator
description = AI小说生成工具

[options]
packages = find:
install_requires =
    customtkinter>=5.2.0
    openai>=1.0.0
    chromadb>=0.4.0
    psutil>=5.8.0

[options.extras_require]
test =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-mock>=3.10.0
    pytest-asyncio>=0.21.0
