[metadata]
name = ai-novel-generator
description = AI小说生成工具

[options]
packages = find:
install_requires =
    customtkinter>=5.2.0
    openai>=1.0.0
    langchain-openai>=0.1.0
    google-generativeai>=0.8.0
    azure-ai-inference>=1.0.0b9
    azure-core>=1.30.0
    requests>=2.31.0
    python-dotenv>=1.0.0
    backoff>=2.2.1
    tenacity>=8.2.3
    chromadb>=0.4.0
    psutil>=5.8.0
    socksio>=1.0.0

[options.extras_require]
test =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-mock>=3.10.0
    pytest-asyncio>=0.21.0
